--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 				</a></h1>
 				
 					<div class="repeat"></div>
-				
-				 <div id="menu">
+	<nav>
+    <div id="menu">
         <ul class="root">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -28,6 +28,7 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
+	</nav>
 			</header>
 			<!-- ヘッダー ここまで -->
 			<!-- メイン -->
